--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "chai": "^4.1.2",
+        "electron": "^1.7.11",
         "express": "^4.16.2",
         "jquery": "^3.3.1",
         "lodash": "^4.17.4",
