--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "dependencies": {
         "chai": "^4.1.2",
-        "electron": "^1.8.1",
+        "electron": "^1.8.2-beta.4",
         "express": "^4.16.2",
         "jquery": "^3.3.1",
         "lodash": "^4.17.4",
